--- a/pawplan/core/templates/animal.html
+++ b/pawplan/core/templates/animal.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <div>{{ animal.name }}</div>
-        <dvi>{{ animal.description }}</dvi>
+        <div>{{ animal.description }}</div>
+        <a href="{% url 'animal_list' %}">Back</a>
     </body>
 </html>
 {% endblock %}
