--- a/pawplan/core/templates/animals.html
+++ b/pawplan/core/templates/animals.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="static/css/animal.css">
     </head>
     <body>
+        <form method="get">
         <div>Location</div>
         <ul>
             {% for option in locationOptions %}
@@ -14,16 +15,17 @@
         <div>Color</div>
         <ul>
             {% for option in colorOptions %}
-            <li><input type="checkbox">{{ option }}</li>
+            <li><input name="color" type="checkbox" value="{{ option }}">{{ option }}</li>
             {% endfor %}
         </ul>
         <div>Sex</div>
         <ul>
             {% for option in sexOptions %}
-            <li><input type="checkbox">{{ option }}</li>
+            <li><input name="sex" type="checkbox" value="{{ option }}">{{ option }}</li>
             {% endfor %}
         </ul>
-        <button>Apply Filters</button>
+        <button type="submit">Apply Filters</button>
+        </form>
         <div>
             <ul>
                 {% for animal in animals %}
