--- a/pawplan/core/templates/animal.html
+++ b/pawplan/core/templates/animal.html
@@ -5,8 +5,10 @@
 
     </head>
     <body>
-        <div>{{ animal.name }}</div>
-        <div>{{ animal.description }}</div>
+        <div>Name: {{ animal.name }}</div>
+        <div>Color: {{ animal.name }}</div>
+        <div>Sex: {{ animal.name }}</div>
+        <div>Description: {{ animal.description }}</div>
         <a href="{% url 'animal_list' %}">Back</a>
     </body>
 </html>
