--- a/pawplan/core/templates/worker_dashboard.html
+++ b/pawplan/core/templates/worker_dashboard.html
@@ -3,6 +3,13 @@
     {% for task in tasks %}
         <h1> {{task.title}} </h1>
         <p> {{task.description}} </p>
+        <p>Shelter: {{task.shelter}} </p>
+        <p>Assignee: {{task.assignee}} </p>
+        <p>Due: {{task.due_date}} </p>
+        <p>Completed: {{task.completion_datetime}} </p>
+        <p>Created: {{task.creation_datetime}} </p>
+        <p>Role: {{task.required_role}} </p>
+        <p>Is Complete: {{task.is_completed}} </p>
     {% endfor %}
 </div>
 {% endblock %}
