Add task html and forms file

--- a/pawplan/core/templates/worker_dashboard.html
+++ b/pawplan/core/templates/worker_dashboard.html
@@ -12,4 +12,8 @@
         <p>Is Complete: {{task.is_completed}} </p>
     {% endfor %}
 </div>
+<!--
+    Add task
+<a href='{% url "add_task" %}'> Add a new task </a>
+-->
 {% endblock %}
