--- a/pawplan/core/templates/animal.html
+++ b/pawplan/core/templates/animal.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div>Name: {{ animal.name }}</div>
-        <div>Color: {{ animal.name }}</div>
-        <div>Sex: {{ animal.name }}</div>
+        <div>Color: {{ animal.color }}</div>
+        <div>Sex: {{ animal.sex }}</div>
         <div>Description: {{ animal.description }}</div>
         <a href="{% url 'animal_list' %}">Back</a>
     </body>
