--- a/pawplan/core/static/css/about.css
+++ b/pawplan/core/static/css/about.css
@@ -1,7 +1,13 @@
+.navbar {
+    position: relative;
+    z-index: 1000;
+}
+
 body, html {
     height: 100%;
     margin: 0;
     font-family: Arial, sans-serif;
+    overflow-y: auto;
 }
 
 .container {
@@ -10,28 +16,37 @@ body, html {
     justify-content: center;
     align-items: center;
     height: 100%;
+    margin-top: -20px;
 }
 
 .title {
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 10px;
+    position: relative;
 }
 
 .content {
-    width: 75%;
-    max-width: 800px;
+    width: 55%;
+    max-width: 1200px;
     text-align: center;
 }
 
-img {
-    max-width: 80%;
-    height: auto;
-    margin-bottom: 20px;
+.carousel {
+    position: relative;
 }
 
-@media (max-width: 768px) {
-    .content {
-        width: 90%;
-    }
+.text-container {
+    width: 90%;
+    max-width: 1200px;
+    text-align: left; 
+    margin-top: 20px; 
+    margin-bottom: 20px; 
+}
+
+.carousel-item img {
+    max-width: 100%;
+    height: 40vh;
+    margin-bottom: 20px;
+    overflow: hidden;
 }
