--- a/pawplan/core/templates/home.html
+++ b/pawplan/core/templates/home.html
@@ -10,7 +10,7 @@
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td align="left" valign="middle">
-            <img src="{% static 'images/Logo.png'}" alt="Logo" width="100" height="auto" style="display: block; padding: 10px;">
+            <img src="{% static 'images/Logo.png' %}" alt="Logo" width="100" height="auto" style="display: block; padding: 10px;">
         </td>
         <td align="center" valign="middle">
             <a href="{% url 'home'%}"> Home </a>
@@ -21,11 +21,21 @@
             <a href="{% url 'login' %}">Login</a>
         </td>
         <td align="right" valign="middle">
-            <img src="{% static 'images/Login.png'}" alt="Login logo" width="80" height="auto" style="display: block; padding: 10px;">
+            <img src="{% static 'images/Login.png' %}" alt="Login logo" width="80" height="auto" style="display: block; padding: 10px;">
         </td>
     </tr>
 </table>
-<img src="{% static 'images/Dog1.png'}" alt="Dog 1"width="500" height="300">
-<img src="{% static 'images/Dog2.png'}" alt="Dog 2" width="500" height="300">
+<body>
+    <div class="slider-container">
+        <div class="slider">
+            {% for image in dogs %}
+                <div class="slide">
+                    <img src="{% static 'images/dogs' %}{{ image }}" alt="Slide">
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+    <script src="{% static 'js/slider.js' %}"></script>
+</body>
 </body>
 </html>
