Fixture.py has more animals and urls to random photospulled from api are stored for each animal.

--- a/pawplan/core/templates/animal.html
+++ b/pawplan/core/templates/animal.html
@@ -5,6 +5,7 @@
 
     </head>
     <body>
+        <image src="{{ animal.image }}"/>
         <div>Name: {{ animal.name }}</div>
         <div>Color: {{ animal.color }}</div>
         <div>Sex: {{ animal.sex }}</div>
