--- a/pawplan/core/templates/home.html
+++ b/pawplan/core/templates/home.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+{% include 'navbar.html' %}
+
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td align="left" valign="middle">
@@ -14,7 +16,7 @@
         </td>
         <td align="center" valign="middle">
             <a href="{% url 'home'%}"> Home </a>
-            <a href="{% url 'adopt'%}"> Adopt </a>
+            <a href="{% url 'animals'%}"> Adopt </a>
             <a href="{% url 'about'%}"> About Us </a>
         </td>
         <td align="right">
