fix navbar links, add navbar to base, and use login to access dashboard

--- a/pawplan/core/templates/base.html
+++ b/pawplan/core/templates/base.html
@@ -11,6 +11,8 @@
         <!-- header content here -->
     </header>
 
+    {% include 'navbar.html' %}
+
     <main>
         {% block content %}
         <!-- overridden by child templates -->
