--- a/pawplan/core/templates/animal_list.html
+++ b/pawplan/core/templates/animal_list.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+
 {% block content %}
+
 <html>
     <head>
         <script src="https://unpkg.com/htmx.org@1.9.10"></script>
@@ -39,4 +41,5 @@
         </div>
     </body>
 </html>
+
 {% endblock %}
