--- a/pawplan/core/templates/home.html
+++ b/pawplan/core/templates/home.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-
-{% include 'navbar.html' %}
-
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td align="left" valign="middle">
