--- a/pawplan/core/templates/navbar.html
+++ b/pawplan/core/templates/navbar.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="stylesheet" href="{% static '/css/navbar.css' %}">
 <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{% url 'home' %}">
         PawPlan <i class="fas fa-paw"></i>
     </a>
     <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,10 +15,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto" style="padding-right: 20px;">
         <li class="nav-item {% if request.path == '/' %}active{% endif %}">
-            <a class="nav-link" href="#">Home{% if request.path == '/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link" href="{% url 'home' %}">Home{% if request.path == '/' %}<span class="sr-only">(current)</span>{% endif %}</a>
         </li>
         <li class="nav-item {% if request.path == '/adopt/' %}active{% endif %}">
-            <a class="nav-link" href="#">Adopt{% if request.path == '/adopt/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link" href="{% url 'animal_list' %}">Adopt{% if request.path == '/animal_list/' %}<span class="sr-only">(current)</span>{% endif %}</a>
         </li>
         <li class="nav-item {% if request.path == '/about/' %}active{% endif %}">
             <a class="nav-link" href="{% url 'about' %}">About Us{% if request.path == '/about/' %}<span class="sr-only">(current)</span>{% endif %}</a>
@@ -28,7 +28,7 @@
     <div>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
         </ul>
     </div>
