--- a/pawplan/core/templates/home.html
+++ b/pawplan/core/templates/home.html
@@ -22,15 +22,17 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="{% static '/images/dog1.jpg' %}" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static '/images/dog2.jpg' %}" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="{% static '/images/dog3.jpg' %}" alt="Third slide">
-                </div>
+                {% for animal in animals %}
+                    {% if forloop.first %}
+                        <div class="carousel-item active">
+                    {% else %}
+                        <div class="carousel-item">
+                    {% endif %}
+                        <a href="animal/{{ animal.id }}">
+                            <img class="d-block w-100" src="{{ animal.image }}" alt="animal image">
+                        </a>
+                    </div>
+                {% endfor %}
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
