--- a/pawplan/core/templates/add_task.html
+++ b/pawplan/core/templates/add_task.html
@@ -1,13 +1,16 @@
 {% block content %}
-<div>
+<div class="container">
 
-    <form action = '{% url "add_task" %}' method="post">
-
+    <h2>Add New Task</h2>
+    <form action="" method="post">
         {% csrf_token %}
         
-        {{ form }}
+        {{ form.as_p }}
+        
+        <button type="submit" class="btn btn-primary">Save New Task</button>
 
-        <input type="submit"  value="Add Task">
+        <a href="{% url 'worker_dash' %}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
+
 {% endblock %}
