add task views and url

--- a/pawplan/core/templates/worker_dashboard.html
+++ b/pawplan/core/templates/worker_dashboard.html
@@ -45,6 +45,8 @@
         <button type="submit">Apply Sort</button>
     </form>
 
+    <a href=" {% url 'add_task' %}"> Add Task </a>
+
     <div id="task-list">
         <!-- include task_list.html dynamically -->
         {% include 'task_list.html' %}
