--- a/pawplan/core/templates/home.html
+++ b/pawplan/core/templates/home.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <div class="container">
+    <h1>Welcome to Our Website</h1>
     <div class="content">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -43,6 +44,10 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+    </div>
+    <div>
+        <h2>Interested in Volunteering?</h2>
+        <a href="{% url 'volunteer_form' %}" class="btn btn-primary">Volunteer now</a>
     </div>
 </body>
 </html>
