--- a/pawplan/core/templates/navbar.html
+++ b/pawplan/core/templates/navbar.html
@@ -28,7 +28,7 @@
     <div>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-link" href="{% url 'worker_dash' %}">Dashboard</a>
             </li>
         </ul>
     </div>
