Did some css to adoption list

--- a/pawplan/core/templates/partials/animals.html
+++ b/pawplan/core/templates/partials/animals.html
@@ -3,6 +3,7 @@
         {% for animal in animals %}
         <li>
             <a href="animal/{{ animal.id }}">
+                <img style="max-width:30%;" src="{{ animal.image }}"/>
                 <div>{{animal.name}}</div>
             </a>
         </li>
