--- a/pawplan/core/templates/animal.html
+++ b/pawplan/core/templates/animal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% block content %}
 <html>
     <head>
@@ -6,19 +6,24 @@
         <link rel="stylesheet" href="{% static 'css/animal.css' %}">
     </head>
     <body>
-        <image src="{{ animal.image }}"/>
-        <div>Name: {{ animal.name }}</div>
-        <div>Color: {{ animal.color }}</div>
-        <div>Sex: {{ animal.sex }}</div>
-        <div>Description: {{ animal.description }}</div>
-        <a href="{% url 'animal_list' %}">Back</a>
+        <div id="content">
+            <div id="info-container">
+                <img src="{{ animal.image }}"/>
+                <div>Name: {{ animal.name }}</div>
+                <div>Color: {{ animal.color }}</div>
+                <div>Sex: {{ animal.sex }}</div>
+                <div>Description: {{ animal.description }}</div>
+                <a href="{% url 'animal_list' %}">Back</a>
+            </div>
 
-        <div id="form-container">
-            <form action="adoption/{{ animal.pk }}" method="post">
-                {% csrf_token %} 
-                {{ adoptionForm }} 
-                <input type="submit" value="Adopt">
-            </form>
+            <div id="form-container">
+                <h3>Adoption Form</h1>
+                <form action="adoption/{{ animal.pk }}" method="post">
+                    {% csrf_token %} 
+                    {{ adoptionForm }} 
+                    <input type="submit" value="Adopt">
+                </form>
+            </div>
         </div>
     </body>
 </html>
