--- a/pawplan/core/templates/animal_list.html
+++ b/pawplan/core/templates/animal_list.html
@@ -1,43 +1,50 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 
 <html>
     <head>
         <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+        <link rel="stylesheet" href="{% static 'css/animal_list.css' %}">
     </head>
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
-        <div>Location</div>
-        <ul>
-            {% for option in locationOptions %}
-            <li><input hx-get="{% url 'animals' %}" 
-                    hx-trigger="click" 
-                    hx-target="#animals" 
-                    hx-include="[name='color'], [name='location'], [name='sex']" 
-                    name="location" type="checkbox" value="{{ option }}">{{ option }}</li>
-            {% endfor %}
-        </ul>
-        <div>Color</div>
-        <ul>
-            {% for option in colorOptions %}
-            <li><input hx-get="{% url 'animals' %}" 
-                hx-trigger="click" 
-                hx-target="#animals" 
-                hx-include="[name='color'], [name='location'], [name='sex']" 
-                name="color" type="checkbox" value="{{ option }}">{{ option }}</li>
-            {% endfor %}
-        </ul>
-        <div>Sex</div>
-        <ul>
-            {% for option in sexOptions %}
-            <li><input hx-get="{% url 'animals' %}" 
-                hx-trigger="click" 
-                hx-target="#animals" 
-                hx-include="[name='color'], [name='location'], [name='sex']" 
-                name="sex" type="checkbox" value="{{ option }}">{{ option }}</li>
-            {% endfor %}
-        </ul>
-        <div id="animals" hx-get="{% url 'animals' %}"hx-trigger="load">
+        <div class = "content-container">
+            <div class="column">
+                <div>Location</div>
+                <ul>
+                    {% for option in locationOptions %}
+                    <li><input hx-get="{% url 'animals' %}" 
+                            hx-trigger="click" 
+                            hx-target="#animals" 
+                            hx-include="[name='color'], [name='location'], [name='sex']" 
+                            name="location" type="checkbox" value="{{ option }}">{{ option }}</li>
+                    {% endfor %}
+                </ul>
+                <div>Color</div>
+                <ul>
+                    {% for option in colorOptions %}
+                    <li><input hx-get="{% url 'animals' %}" 
+                        hx-trigger="click" 
+                        hx-target="#animals" 
+                        hx-include="[name='color'], [name='location'], [name='sex']" 
+                        name="color" type="checkbox" value="{{ option }}">{{ option }}</li>
+                    {% endfor %}
+                </ul>
+                <div>Sex</div>
+                <ul>
+                    {% for option in sexOptions %}
+                    <li><input hx-get="{% url 'animals' %}" 
+                        hx-trigger="click" 
+                        hx-target="#animals" 
+                        hx-include="[name='color'], [name='location'], [name='sex']" 
+                        name="sex" type="checkbox" value="{{ option }}">{{ option }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="column">
+                <div id="animals" hx-get="{% url 'animals' %}"hx-trigger="load">
+                </div>
+            </div>
         </div>
     </body>
 </html>
