Temporary Styling Change to Home

--- a/pawplan/core/templates/home.html
+++ b/pawplan/core/templates/home.html
@@ -47,7 +47,9 @@
     </div>
     <div>
         <h2>Interested in Volunteering?</h2>
-        <a href="{% url 'volunteer_form' %}" class="btn btn-primary">Volunteer now</a>
+        <div style="text-align: center;">
+            <a href="{% url 'volunteer_form' %}" class="btn btn-primary">Volunteer now</a>
+        </div>
     </div>
 </body>
 </html>
