Volunteer form makes task and comments work.

--- a/pawplan/core/templates/login.html
+++ b/pawplan/core/templates/login.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,15 +7,16 @@
     <title>Login Page</title>
 </head>
 <body>
-    <div style="width: 300px; margin: 100px auto; padding: 20px; background-color: #f0f0f0; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+    <div style="width: 400px; margin: 100px auto; padding: 20px; background-color: #f0f0f0; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
         <h2 style="text-align: center;">Login</h2>
         <form action="../login" method="GET">
             {{ loginForm }} 
             <input type="submit" value="Login" style="width: 100%; padding: 10px; border: none; background-color: #007bff; color: #fff; cursor: pointer; border-radius: 3px;">
         </form>
+        {%if invalid %}
+        <p style="text-align: center;color: red;">Invalid credentials</p>
+        {% endif %}
     </div>
-    {%if invalid %}
-    <p>Invalid credentials</p>
-    {% endif %}
 </body>
 </html>
+{% endblock %}
