--- a/pawplan/core/templates/navbar.html
+++ b/pawplan/core/templates/navbar.html
@@ -27,6 +27,11 @@
     </div>
     <div>
         <ul class="navbar-nav">
+            {% if request.session.is_valid %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+            {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'worker_dash' %}">Dashboard</a>
             </li>
