--- a/pawplan/core/templates/add_task.html
+++ b/pawplan/core/templates/add_task.html
@@ -10,8 +10,8 @@
         <div id="item-container">
 
         </div>
-        <button onClick="createItem()">Add Item</button>
-        <button onClick="removeItem()">Remove Item</button>
+        <button type="button" onClick="createItem()">Add Item</button>
+        <button type="button" onClick="removeItem()">Remove Item</button>
         <button type="submit" class="btn btn-primary">Save New Task</button>
 
         <a href="{% url 'worker_dash' %}" class="btn btn-secondary">Cancel</a>
@@ -24,7 +24,7 @@
     function createItem(){
         var item = document.createElement("input");
         item.setAttribute("type", "text");
-        item.setAttribute("name", "Item");
+        item.setAttribute("name", "item");
         item.setAttribute("placeholder", "Add task item");
         div.appendChild(item);
     }
