--- a/pawplan/core/templates/task_list.html
+++ b/pawplan/core/templates/task_list.html
@@ -6,7 +6,14 @@
                 <h5 class="card-title">{{ task.title }}</h5>
                 <p class="card-text">{{ task.description|truncatechars:50 }}</p>
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#taskModal{{ task.id }}">
+                <button hx-get="{% url 'task_items' %}"
+                        hx-trigger="click"
+                        hx-vals='{"task_id": "{{ task.id }}"}'
+                        hx-target="#task{{ task.id }}"
+                        type="button" 
+                        class="btn btn-primary" 
+                        data-bs-toggle="modal" 
+                        data-bs-target="#taskModal{{ task.id }}">
                     View Details
                 </button>
             </div>
@@ -21,6 +28,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
+                        <p>{{ task.num_items_complete }} out of {{ task.num_items }} complete</p>
                         <p>{{ task.description }}</p>
                         <p>Shelter: {{ task.shelter }}</p>
                         <p>Assignee: {{ task.assignee }}</p>
@@ -28,7 +36,8 @@
                         <p>Completed: {{ task.completion_datetime }}</p>
                         <p>Created: {{ task.creation_datetime }}</p>
                         <p>Role: {{ task.required_role }}</p>
-                        <p>Is Complete: {{ task.is_completed }}</p>
+                        <div id="task{{ task.id }}">
+                        </div>
                         <!-- Display comments -->
                         <div class="comments">
                             <h6>Comments:</h6>
