--- a/pawplan/core/templates/add_animal.html
+++ b/pawplan/core/templates/add_animal.html
@@ -1,16 +1,23 @@
+{% include 'navbar.html' %}
+{% load static %}
+
+<head>
+    <title>Add Animal</title>
+    <link rel="stylesheet" href="{% static '/css/edit.css' %}">
+</head>
+<body>
+
 {% block content %}
 <div class="container">
-
-    <h2>Add New Animal</h2>
-    <form action="" method="post">
-        {% csrf_token %}
-        
-        {{ form.as_p }}
-        
-        <button type="submit" class="btn btn-primary">Save New Task</button>
-
-        <a href="{% url 'worker_dash' %}" class="btn btn-secondary">Cancel</a>
-    </form>
+    <div class="form-box">
+        <h2>Add New Animal</h2>
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Save New Task</button>
+            <a href="{% url 'worker_dash' %}" class="btn btn-secondary">Cancel</a>
+        </form>
+    </div>
 </div>
-
+</body>
 {% endblock %}
