--- a/pawplan/core/templates/add_task.html
+++ b/pawplan/core/templates/add_task.html
@@ -1,4 +1,12 @@
-{% block content %}
+{% include 'navbar.html' %}
+{% load static %}
+
+<head>
+    <title>Add New Task</title>
+    <link rel="stylesheet" href="{% static '/css/edit.css' %}">
+</head>
+<body>
+
 <div class="container">
 
     <h2>Add New Task</h2>
@@ -10,8 +18,8 @@
         <div id="item-container">
 
         </div>
-        <button type="button" onClick="createItem()">Add Item</button>
-        <button type="button" onClick="removeItem()">Remove Item</button>
+        <button type="button" class="btn btn-primary" onClick="createItem()">Add Item</button>
+        <button type="button" class="btn btn-primary" onClick="removeItem()">Remove Item</button>
         <button type="submit" class="btn btn-primary">Save New Task</button>
 
         <a href="{% url 'worker_dash' %}" class="btn btn-secondary">Cancel</a>
@@ -35,4 +43,5 @@
 
 </script>
 
-{% endblock %}
+</body>
+</html>
