--- a/pawplan/core/templates/edit_task.html
+++ b/pawplan/core/templates/edit_task.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
+<head>
+    <title>Edit Task</title>
+    <link rel="stylesheet" href="{% static '/css/edit.css' %}">
+</head>
+<body>
 <div class="container">
     <h2>Edit Task</h2>
     <form action="" method="post">
@@ -10,4 +15,5 @@
         <a href="{% url 'worker_dash' %}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
+</body>
 {% endblock %}
