--- a/pawplan/core/templates/task_list.html
+++ b/pawplan/core/templates/task_list.html
@@ -54,6 +54,7 @@
                     </div>
                     <div class="modal-footer">
                         <a href="{% url 'edit_task' task.id %}" class="btn btn-secondary">Edit</a>
+                        <a href="{% url 'release_task' task.id %}" class="btn btn-secondary">Release</a>
                         <a href="{% url 'complete_task' task.id %}" class="btn btn-secondary">Mark as Complete</a>
                         <form action="{% url 'delete_task' task.id %}" method="post" style="display: inline;">
                             {% csrf_token %}
