--- a/pawplan/core/templates/task_list.html
+++ b/pawplan/core/templates/task_list.html
@@ -61,6 +61,7 @@
                             <button type="submit" class="btn btn-primary">Post Comment</button>
                         </form>
                     </div>
+                    {% if request.session.is_manager %}
                     <div class="modal-footer">
                         <a href="{% url 'edit_task' task.id %}" class="btn btn-secondary">Edit</a>
                         <form action="{% url 'delete_task' task.id %}" method="post" style="display: inline;">
@@ -68,6 +69,7 @@
                             <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?');">Delete</button>
                         </form>
                     </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
