--- a/pawplan/core/templates/worker_dashboard.html
+++ b/pawplan/core/templates/worker_dashboard.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
+
+<head>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="{% static '/css/edit.css' %}">
+</head>
 
 <script src="https://unpkg.com/htmx.org@latest"></script>
 
