--- a/pawplan/core/templates/partials/task_item_list.html
+++ b/pawplan/core/templates/partials/task_item_list.html
@@ -6,7 +6,7 @@
         {% else %}
             <form action="{% url 'complete_item' item.id %}" method="post" style="display: inline;">
                 {% csrf_token %}
-                <button type="submit">Complete</button>
+                <button type="submit" class="btn btn-success">Complete</button>
             </form>
         {% endif %}
     {% endfor %}
