--- a/pawplan/core/static/css/volunteer.css
+++ b/pawplan/core/static/css/volunteer.css
@@ -1,41 +1,15 @@
-body, html {
-    height: 100%;
-    background-color: #ebebeb;
+#submit{
+    margin-left: auto;
 }
 
-.container {
+#form-elements{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
 }
 
-.form-box {
-    width: 800px;
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
-    margin-top: -40px;
+#container{
+    margin-bottom: 50px;
 }
 
-.form-box h1 {
-    text-align: center;
-    margin-bottom: 20px; 
-}
-
-.form-box form {
-    width: 100%;
-}
-
-.form-box label,
-.form-box select {
-    display: inline-block;
-    margin-bottom: 10px;
-    margin-top: 15px;
-}
-
-.form-box button {
-    display: block;
-    margin-top: 10px;
+#shelter{
+    margin-left: 10px;
 }
