--- a/pawplan/core/templates/add_animal.html
+++ b/pawplan/core/templates/add_animal.html
@@ -1,4 +1,5 @@
 {% include 'navbar.html' %}
+{% load crispy_forms_tags %}
 {% load static %}
 
 <head>
@@ -13,7 +14,7 @@
         <h2>Add New Animal</h2>
         <form action="" method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy }}
             <button type="submit" class="btn btn-primary">Save New Task</button>
             <a href="{% url 'worker_dash' %}" class="btn btn-secondary">Cancel</a>
         </form>
