--- a/pawplan/core/templates/add_task.html
+++ b/pawplan/core/templates/add_task.html
@@ -1,4 +1,5 @@
 {% include 'navbar.html' %}
+{% load crispy_forms_tags %}
 {% load static %}
 
 <head>
@@ -13,7 +14,7 @@
     <form id="task" action="" method="post">
         {% csrf_token %}
         
-        {{ form.as_p }}
+        {{ form|crispy }}
         
         <div id="item-container">
 
