--- a/pawplan/core/templates/login.html
+++ b/pawplan/core/templates/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
     <div style="width: 400px; margin: 100px auto; padding: 20px; background-color: #f0f0f0; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
         <h2 style="text-align: center;">Login</h2>
         <form action="../login" method="GET">
-            {{ loginForm }} 
+            {{ loginForm|crispy }} 
             <input type="submit" value="Login" style="width: 100%; padding: 10px; border: none; background-color: #007bff; color: #fff; cursor: pointer; border-radius: 3px;">
         </form>
         {%if invalid %}
