--- a/pawplan/core/templates/task_list.html
+++ b/pawplan/core/templates/task_list.html
@@ -1,6 +1,7 @@
 <!-- task_list.html -->
-<div class="container mt-3">
+<div class = "overflow-auto" style="max-height: 800px;" class="container mt-3">
     {% for task in tasks %}
+    {% if task.assignee is not None or request.session.is_manager %}
         <div class="card mb-2">
             <div class="card-body">
                 <h5 class="card-title">{{ task.title }}</h5>
@@ -66,21 +67,21 @@
                             <button type="submit" class="btn btn-primary">Post Comment</button>
                         </form>
                     </div>
-                    {% if request.session.is_manager %}
                     <div class="modal-footer">
+                        {% if task.num_items_complete == task.num_items and not task.is_completed %}
+                        <a href="{% url 'complete_task' task.id %}" class="btn btn-success">Mark as Complete</a>
+                        {% endif %}
+                        {% if request.session.is_manager %}
                         <a href="{% url 'edit_task' task.id %}" class="btn btn-secondary">Edit</a>
-                        <a href="{% url 'complete_task' task.id %}" class="btn btn-secondary">Mark as Complete</a>
                         <form action="{% url 'delete_task' task.id %}" method="post" style="display: inline;">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?');">Delete</button>
                         </form>
+                        {% endif %}
                     </div>
-                    {% endif %}
                 </div>
             </div>
         </div>
-
-    {% empty %}
-        <p>No tasks found.</p>
+    {% endif %}
     {% endfor %}
 </div>
