--- a/pawplan/core/templates/animal.html
+++ b/pawplan/core/templates/animal.html
@@ -35,7 +35,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form method="post">
+                        <form action="adoption/{{ animal.id }}" method="post">
                             {% csrf_token %}
                             {{form|crispy}}
                             <button type="submit" class="btn btn-primary">Submit</button>
