Users can only complete and release tasks they are assigned

--- a/pawplan/core/templates/partials/task_item_list.html
+++ b/pawplan/core/templates/partials/task_item_list.html
@@ -6,7 +6,9 @@
         {% else %}
             <form action="{% url 'complete_item' item.id %}" method="post" style="display: inline;">
                 {% csrf_token %}
+                {% if item.task.assignee.email == request.session.worker %}
                 <button type="submit" class="btn btn-success">Complete</button>
+                {% endif %}
             </form>
         {% endif %}
     {% endfor %}
