--- a/pawplan/core/templates/base.html
+++ b/pawplan/core/templates/base.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
 
+    {% block extra_css %}{% endblock %}
+    {% block extra_js %}{% endblock %}
+
 </head>
 <body>
     <header>
