add and edit worker

--- a/pawplan/core/templates/worker_list.html
+++ b/pawplan/core/templates/worker_list.html
@@ -15,7 +15,7 @@
         </div>
 
         <!-- Worker Modal -->
-        <div class="modal fade" id="taskModal{{ worker.id }}" tabindex="-1" aria-labelledby="workerModalLabel{{ worker.id }}" aria-hidden="true">
+        <div class="modal fade" id="workerModal{{ worker.id }}" tabindex="-1" aria-labelledby="workerModalLabel{{ worker.id }}" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
