--- a/pawplan/core/templates/worker_dashboard.html
+++ b/pawplan/core/templates/worker_dashboard.html
@@ -128,6 +128,17 @@
                         {% include 'dash_animal_list.html' %}
                     </div>
                 </div>
+
+                <div class="col-md-6">
+                    <h2>Employees</h2>
+                    {% if request.session.is_manager %}
+                    <a href="{% url 'add_worker' %}" class="btn btn-success mb-3">Add Worker</a>
+                    {% endif %}
+                    <div id="worker-list">
+                        {% include 'worker_list.html' %}
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
