add option to switch between list and calendar view in dashboard

--- a/pawplan/core/templates/navbar.html
+++ b/pawplan/core/templates/navbar.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'task_calendar' %}">Calendar</a>
+            </li>
             {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'worker_dash' %}">Dashboard</a>
