--- a/pawplan/core/templates/worker_dashboard.html
+++ b/pawplan/core/templates/worker_dashboard.html
@@ -90,8 +90,8 @@
                                     <label for="animal-sex" class="form-label">Sex:</label>
                                     <select id="animal-sex" name="sex" class="form-select">
                                         <option value="">All</option>
-                                        <option value="male">Male</option>
-                                        <option value="female">Female</option>
+                                        <option value="M">Male</option>
+                                        <option value="F">Female</option>
                                     </select>
                                 </div>
 
