--- a/pawplan/core/templates/add_animal.html
+++ b/pawplan/core/templates/add_animal.html
@@ -15,7 +15,7 @@
         <form action="" method="post">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">Save New Task</button>
+            <button type="submit" class="btn btn-primary">Save New Animal</button>
             <a href="{% url 'worker_dash' %}" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
