--- a/pawplan/core/templates/navbar.html
+++ b/pawplan/core/templates/navbar.html
@@ -13,7 +13,7 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mx-auto" style="padding-right: 20px;">
+      <ul class="navbar-nav mx-auto" style="padding-left: 30px;">
         <li class="nav-item {% if request.path == '/' %}active{% endif %}">
             <a class="nav-link" href="{% url 'home' %}">Home{% if request.path == '/' %}<span class="sr-only">(current)</span>{% endif %}</a>
         </li>
